--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,7 @@
 @import "pages/index";
 @import "pages/login";
 @import "sections/navbar";
+@import "sections/footer";
 
 $main : #d91e33;
 $secondary : #999999;
