--- a/resources/sass/pages/login.scss
+++ b/resources/sass/pages/login.scss
@@ -58,18 +58,18 @@ form {
     color: #bbb;
 }
 
-input {
-    width: 100%;
-    background: rgba(0, 0, 0, 0.42);
-    outline: none;
-    padding: 10px 14px;
-    color: #fff;
-    border: none;
-    border-radius: 36px;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 16px;
-    transition: background 0.5s ease-in-out;
-}
+//input {
+//    width: 100%;
+//    background: rgba(0, 0, 0, 0.42);
+//    outline: none;
+//    padding: 10px 14px;
+//    color: #fff;
+//    border: none;
+//    border-radius: 36px;
+//    font-family: 'Ubuntu', sans-serif;
+//    font-size: 16px;
+//    transition: background 0.5s ease-in-out;
+//}
 span#showpwd {
     position: absolute;
     top: 32px;
@@ -157,5 +157,99 @@ input[type="submit"] {
 @media screen and (max-width :490px) {
     #wrapper {
         padding: 28px;
+    }
+}
+
+
+#login-page {
+    width: 100%;
+    height: 100vh;
+    background: url(https://coloredbrain.com/wp-content/uploads/2016/07/login-background.jpg) ;
+    background-size: cover;
+
+    .row {
+        padding-top: 15%;
+
+        .card {
+            position: relative;
+        }
+        .login-btn {
+            width: 100%;
+            background: #98c93c;
+            display: block;
+            border: none;
+            border-radius: 0;
+            height: 55px;
+            color: #fff;
+            font-size: 18px;
+            font-weight: 600;
+        }
+
+        body { padding: 2em; }
+
+
+        /* Shared */
+        .loginBtn {
+            box-sizing: border-box;
+            position: relative;
+            /* width: 13em;  - apply for fixed size */
+            margin: 0.2em;
+            padding: 0 15px 0 46px;
+            border: none;
+            text-align: left;
+            line-height: 34px;
+            white-space: nowrap;
+            border-radius: 0.2em;
+            font-size: 16px;
+            color: #FFF;
+        }
+        .loginBtn:before {
+            content: "";
+            box-sizing: border-box;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 34px;
+            height: 100%;
+        }
+        .loginBtn:focus {
+            outline: none;
+        }
+        .loginBtn:active {
+            box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
+        }
+
+
+        /* Facebook */
+        .loginBtn--facebook {
+            background-color: #4C69BA;
+            background-image: linear-gradient(#4C69BA, #3B55A0);
+            /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
+            text-shadow: 0 -1px 0 #354C8C;
+        }
+        .loginBtn--facebook:before {
+            border-right: #364e92 1px solid;
+            background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png') 6px 6px no-repeat;
+        }
+        .loginBtn--facebook:hover,
+        .loginBtn--facebook:focus {
+            background-color: #5B7BD5;
+            background-image: linear-gradient(#5B7BD5, #4864B1);
+        }
+
+
+        /* Google */
+        .loginBtn--google {
+            /*font-family: "Roboto", Roboto, arial, sans-serif;*/
+            background: #DD4B39;
+        }
+        .loginBtn--google:before {
+            border-right: #BB3F30 1px solid;
+            background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
+        }
+        .loginBtn--google:hover,
+        .loginBtn--google:focus {
+            background: #E74B37;
+        }
     }
 }
