--- a/resources/sass/sections/navbar.scss
+++ b/resources/sass/sections/navbar.scss
@@ -2,21 +2,12 @@
     width: 100%;
     height: 90px;
 
-    .dropdown:hover>.dropdown-menu {
-        display: block;
-    }
-    .dropdown>.dropdown-toggle:active {
-        /*Without this, clicking will make it sticky*/
-        pointer-events: none;
-    }
-
     .dropdown {
         margin: 0 2%;
 
         .dropdown-menu {
-            width: 65%;
+            width: auto;
             background: rgba(0, 0, 0, 0.5);
-            border: navajowhite;
             border-radius: 0;
             margin-top: 10%;
         }
@@ -26,24 +17,35 @@
             font-size: 16px;
         }
 
-        .nav-link {
-            font-size: 15px;
-            font-weight: 600;
-            color: #fff;
-            border-bottom: 2px solid transparent;
+        .dropdown-item:hover {
+            background: rgba(255, 255, 255, .2);
+            color: #98c93c;
         }
 
-        .nav-link:hover {
-            border-bottom: 2px solid #98c93c;
-            transition: all 0.3s ease;
-        }
 
     }
 
-    .scrolled {
-        #navbar{
-            background: red;
-        }
+    .dropdown:after {
+        content: '';
+        display: block;
+        border-bottom: 2px solid #98c93c;
+        width: 0;
+        transition: .5s ease;
     }
 
+    .dropdown:hover:after {
+        width: 100%;
+    }
+
+     .nav-link {
+        color: white;
+        font-size: 15px;
+        font-weight: 600;
+
+    }
+
+     .nav-link:hover {
+        color: #98c93c;
+        transition: ease-in .1s;
+    }
 }
